--- a/SalesWebMvc/Views/Home/About.cshtml
+++ b/SalesWebMvc/Views/Home/About.cshtml
@@ -4,4 +4,8 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Programmer: @ViewData["Programador"]</p>
+
+<address>
+    <strong>More Information: </strong> <a href="http://www.gmail.com">vitor.perez@aluno.ifsp.edu.br</a>
+</address>
